--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "node scripts/generate-llm-docs.mjs && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "generate:llm": "node scripts/generate-llm-docs.mjs"
   },
   "dependencies": {
     "@astrojs/starlight": "^0.36.2",
